--- a/Codice/css/welcomePage.css
+++ b/Codice/css/welcomePage.css
@@ -1,7 +1,7 @@
 body{
   width: 100%;
   height: 100%;
-  background: url(https://subtlepatterns.com/patterns/sativa.png) repeat fixed;
+  background: url(../img/bg.png) repeat fixed;
   font-family: 'Open Sans', sans-serif;
   font-weight: 200;
 }
@@ -14,7 +14,7 @@ a{
   position: absolute;
   left: 35%;
   width: 30%;
-  height: 30%;
+  height: 30vw;
   top: 35%;
 }
 #buttonNext{
