--- a/Codice/css/register.css
+++ b/Codice/css/register.css
@@ -4,6 +4,7 @@ body{
   background: url(../img/bg.png) repeat fixed;
   font-family: 'Open Sans', sans-serif;
   font-weight: 200;
+  overflow: hidden;
 }
 a{
   text-decoration: none;
@@ -33,31 +34,34 @@ h5{
 input{
   position: relative;
   box-sizing: border-box;
+  width: 100%;
   height:  25px;
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 40px;
   border: solid 1px rgb(180,180,180);
 }
+input[type=radio]{
+  width: 10%;
+}
 #overlay {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5);
-    z-index: 2;
-    cursor: pointer;
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  text-align: center;
+}
+#container{
+  position: relative;
+  top: 35%;
+  width: 40%;
+  right: 30%;
+  left: 30%;
 }
 #text{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 50px;
-    color: white;
-    transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
+  position: relative;
+  font-size: 50px;
+  color: white;
 }
