--- a/Codice/css/correction.css
+++ b/Codice/css/correction.css
@@ -5,7 +5,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   font-weight: 200;
   margin: 0;
-  overflow: hidden;
+
 }
 a{
   text-decoration: none;
@@ -41,10 +41,6 @@ a{
   background-color: #ddd;
 }
 input{
-  position: relative;
-  box-sizing: border-box;
-  width: 100%;
-  height:  25px;
-  border-radius: 40px;
-  border: solid 1px rgb(180,180,180);
+  border: none;
+  background: transparent;
 }
